istio/istio-ingressgateway.yaml
apiVersion: v1
kind: Service
metadata:
  name: istio-ingressgateway
  namespace: istio-system
  labels:
    app: istio-ingressgateway
    istio: ingressgateway
spec:
  type: LoadBalancer
  selector:
    istio: ingressgateway
  ports:
  - port: 15021
    targetPort: 15021
    protocol: TCP
    name: status-port
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http2
  - port: 443
    targetPort: 8443
    protocol: TCP
    name: https
  - port: 31400
    targetPort: 31400
    protocol: TCP
    name: tcp
  - port: 15012
    targetPort: 15012
    protocol: TCP
    name: tcp-istiod
  - port: 15443
    targetPort: 15443
    protocol: TCP
    name: tls
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: istio-ingressgateway
  namespace: istio-system
  labels:
    app: istio-ingressgateway
    istio: ingressgateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: istio-ingressgateway
  template:
    metadata:
      labels:
        app: istio-ingressgateway
        istio: ingressgateway
    spec:
      containers:
      - name: istio-proxy
        image: gcr.io/istio-release/proxyv2:1.15.0
        ports:
        - containerPort: 15021
        - containerPort: 8080
        - containerPort: 8443
        - containerPort: 31400
        - containerPort: 15012
        - containerPort: 15443
        args:
        - proxy
        - router
        - --domain
        - $(POD_NAMESPACE).svc.cluster.local
        - --log_output_level=default:info
        - --drainDuration
        - 45s
        - --parentShutdownDuration
        - 1m0s
        - --connectTimeout
        - 10s
        - --serviceCluster
        - istio-ingressgateway
