istio/app-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: asm-multicluster-gateway
  namespace: default
spec:
  selector:
    istio: ingressgateway # Use Istio's ingress gateway deployed by ASM
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nodejs-virtualservice
  namespace: default
spec:
  hosts:
  - "*"
  gateways:
  - asm-multicluster-gateway
  http:
  - route:
    - destination:
        host: nodejs-app-service.default.svc.cluster.local
        port:
          number: 80
